--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,10 +1,8 @@
 .HeaderStyle {
-    box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%;
   display: flex;
   align-items: baseline;
-  padding: 1em;
-  margin-bottom: 2em;
-  background-color: rgb(192, 45, 26);
-  color: #fff;
+  padding: 20px;
+  margin-bottom: 5px;
 }
