--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,8 @@ img {
   width: 150px;
 }
 
+
+
 span[role="img"] {
   cursor: default;
 }
@@ -170,6 +172,25 @@ textarea {
 	height: 120px;
 	border: 3px solid #cccccc;
 	padding: 5px;
+}
+.footer{
+  margin-top: 1rem;
+  padding: 1rem;
+  background-color: #d39596;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.card {
+  background: #fff;
+  border-radius: 2px;
+  height: 325px;
+  margin: 1rem;
+  position: relative;
+  width: 325px;
+  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  text-align: left;
 }
 
 .container {
