--- a/src/index.css
+++ b/src/index.css
@@ -86,22 +86,11 @@ p {
 }
 
 a {
-  color: var(--tertiary);
+ 
   text-decoration: none;
-  font-weight: bold;
+  
 }
 
-a:hover {
-  text-decoration: underline;
-}
-
-header {
-  background: var(--dark);
-}
-
-header a {
-  color: var(--light);
-}
 
 button {
   font-size: 1rem;
@@ -157,10 +146,12 @@ input:focus {
 
 li {
   list-style: none;
+  color: white;
 }
 
-nav a:hover {
-  text-decoration: none;
+nav li:hover {
+  text-decoration: underline;
+  color:black
 }
 
 nav  li {
@@ -178,6 +169,7 @@ textarea {
   padding: 1rem;
   background-color: #d39596;
   bottom: 0;
+  position:fixed;
   left: 0;
   width: 100%;
 }
@@ -268,32 +260,6 @@ textarea {
   height: 300px;
   margin-bottom: 50px;
   cursor: pointer;
-}
-
-.modalBackdrop {
-	background: rgba(0, 0, 0, .65);
-	bottom: 0;
-	left: 0;
-	overflow: auto;
-	position: fixed;
-	right: 0;
-	top: 0;
-	z-index: 1;
-}
-
-.modalContainer {
-	background: var(--darker);
-	border-radius: 5px;
-	max-width: 100%;
-	margin: 50px auto;
-	padding: 15px;
-	width: 960px;
-}
-
-.modalTitle {
-	font-size: 18px;
-	font-weight: 600;
-	margin-bottom: 25px;
 }
 
 button {
